recupérer les donnés

--- a/fichier.html
+++ b/fichier.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="score">
+       score est:<span>0</span>
+    </div>
     
 </body>
 </html>
